2008-02-28  Eitan Isaacson  <eitan@ascender.com>

	* plugins/event_monitor.py: Make hyperlinks work with single
	clicks (bug #494632). Thanks Steve Lee and Brian G. Merrell!
	* plugins/api_view.py: Put interface combo box on tob (bug
	#493650). Thanks Brian G. Merrell!
	* plugins/interface_view.py: Swapped absolute and relative
	positions in Component section (bug #503654).
	
2008-02-10  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/Makefile.am: Removed pyatspi.zip
	* NEWS:
	* README: 
	* configure.in: 
	* debian/changelog: 1.1.91 release.

2008-02-08  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyatspi.zip: Deleted.

2008-01-28  Eitan Isaacson  <eitan@ascender.com>

	* NEWS:
	* README: 
	* configure.in: 
	* debian/changelog: 1.1.90 release.

	* src/lib/accerciser/accerciser.py: Make event handling asynchronous.
	* plugins/event_monitor.py: Remove decoupling of event handling, we
	don't need to worry about it any more.

2008-01-26  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/accerciser.py: Fixed hang when enabling
	desktop a11y through accerciser (bug #509805). Thanks Pedro Fragoso.

2008-01-16  Peter Parente  <parente@cs.unc.edu>

	* plugindata/validate/basic.py: Added comments

2008-01-14  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.5.
	* plugindata/validate/basic.py: Added translator comments.

2008-01-11  Eitan Isaacson  <eitan@ascender.com>

	* plugindata/validate/Makefile.am: Fixed install path.
	* plugins/event_monitor.py: Added a new global hotkey for
	starting/stopping recording.
	* plugins/validate.glade: Removed Save button, changed layout so
	it won't be so wide. Added label relationships to comobox and label.
	* plugins/validate.py: Removed Save button stuff.

	* plugindata/validate/Makefile.am: 
	* plugindata/Makefile.am: Added missing Makefile.ams.
	

2008-01-10  Peter Parente  <parente@cs.unc.edu>

	* plugins/validate.py